Remove BSF2.x support.
Removed in favour of JSR223 support.
BSF engine moved to external module bsh-bsf-engine for anyone that might still require it.