@@ -1,37 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-   ====================================================================
-   Licensed to the Apache Software Foundation (ASF) under one
-   or more contributor license agreements.  See the NOTICE file
-   distributed with this work for additional information
-   regarding copyright ownership.  The ASF licenses this file
-   to you under the Apache License, Version 2.0 (the
-   "License"); you may not use this file except in compliance
-   with the License.  You may obtain a copy of the License at
-
-     http://www.apache.org/licenses/LICENSE-2.0
-
-   Unless required by applicable law or agreed to in writing,
-   software distributed under the License is distributed on an
-   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-   KIND, either express or implied.  See the License for the
-   specific language governing permissions and limitations
-   under the License.
-   ====================================================================
-
-  This software consists of voluntary contributions made by many
-  individuals on behalf of the Apache Software Foundation.  For more
-  information on the Apache Software Foundation, please see
-  <http://www.apache.org />.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<!-- ==================================================================== Licensed to the Apache Software 
+  Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with 
+  this work for additional information regarding copyright ownership. The ASF licenses this file to you 
+  under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance 
+  with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
+  Unless required by applicable law or agreed to in writing, software distributed under the License is 
+  distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
+  See the License for the specific language governing permissions and limitations under the License. ==================================================================== 
+  This software consists of voluntary contributions made by many individuals on behalf of the Apache Software 
+  Foundation. For more information on the Apache Software Foundation, please see <http://www.apache.org 
+  />. -->
+<project
+  xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.apache-extras.beanshell</groupId>
-  <artifactId>bsh</artifactId>
+  <artifactId>bsh-bfs-engine</artifactId>
   <version>2.1.0-SNAPSHOT</version>
-  <packaging>bundle</packaging>
 
   <name>BeanShell</name>
   <description>BeanShell is a small, free, embeddable Java source interpreter
@@ -65,9 +52,7 @@
     <tag>HEAD</tag>
   </scm>
   <developers>
-    <!-- Current maintainers according to
-         https://github.com/beanshell/
-    -->
+    <!-- Current maintainers according to https://github.com/beanshell/ -->
     <developer>
       <id>patniemeyer</id>
       <name>Patrick Niemeyer</name>
@@ -141,78 +126,36 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>com.helger.maven</groupId>
-        <artifactId>ph-javacc-maven-plugin</artifactId>
-        <version>2.8.2</version>
-        <executions>
-          <execution>
-            <id>javacc</id>
-            <goals>
-              <!-- jjtree disabled due to manual changes
-                                               in the previously generated bsh.jj :- -->
-              <goal>jjtree-javacc</goal>
-              <!-- disabled due to manual changes in the
-                   generated files in src/main/java
-              <goal>javacc</goal>
-              -->
-            </goals>
-            <configuration>
-                <jdkVersion>1.8</jdkVersion>
-                <javadocFriendlyComments>true</javadocFriendlyComments>
-                <static>false</static>
-                <usercharstream>true</usercharstream>
-                <!--packageName>bsh.parser</packageName>
-                <sourceDirectory>src/main/java/</sourceDirectory>
-                <outputDirectory>${project.build.directory}/generated-sources/javacc</outputDirectory-->
-
-            </configuration>
-          </execution>
-        </executions>
-      <dependencies>
-        <dependency>
-          <groupId>net.java.dev.javacc</groupId>
-          <artifactId>javacc</artifactId>
-          <version>7.0.2</version>
-        </dependency>
-      </dependencies>
-      </plugin>
-      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>2.4</version>
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>bsh.Console</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
+        <version>3.1.0</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>2.17</version>
         <dependencies>
-            <dependency>
-                <groupId>com.puppycrawl.tools</groupId>
-                <artifactId>checkstyle</artifactId>
-                <version>8.2</version>
-            </dependency>
+          <dependency>
+            <groupId>com.puppycrawl.tools</groupId>
+            <artifactId>checkstyle</artifactId>
+            <version>8.10</version>
+          </dependency>
         </dependencies>
         <executions>
-         <execution>
-           <id>validate</id>
-           <phase>verify</phase>
-           <configuration>
-             <encoding>UTF-8</encoding>
-             <failsOnViolation>true</failsOnViolation>
-             <includeTestSourceDirectory>true</includeTestSourceDirectory>
-             <sourceDirectories>
-                 <sourceDirectory>src/main/java</sourceDirectory>
-             </sourceDirectories>
-           </configuration>
-           <goals>
-             <goal>check</goal>
-           </goals>
+          <execution>
+            <id>validate</id>
+            <phase>verify</phase>
+            <configuration>
+              <encoding>UTF-8</encoding>
+              <failsOnViolation>true</failsOnViolation>
+              <includeTestSourceDirectory>true</includeTestSourceDirectory>
+              <sourceDirectories>
+                <sourceDirectory>src/main/java</sourceDirectory>
+              </sourceDirectories>
+            </configuration>
+            <goals>
+              <goal>check</goal>
+            </goals>
           </execution>
         </executions>
       </plugin>
@@ -225,7 +168,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>2.4</version>
+        <version>3.0.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -235,19 +178,25 @@
             <phase>verify</phase>
           </execution>
         </executions>
-    </plugin>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-surefire-plugin</artifactId>
-      <version>2.20.1</version>
-      <configuration>
-        <systemPropertyVariables>
-          <accessibility>false</accessibility>
-          <script></script>
-          <skip_known_issues>true</skip_known_issues>
-         </systemPropertyVariables>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.21.0</version>
+        <configuration>
+          <!--parallel>methods</parallel>
+          <useUnlimitedThreads>true</useUnlimitedThreads>
+          <parallelTestsTimeoutInSeconds>15</parallelTestsTimeoutInSeconds> 
+          <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine-->
+          <argLinezzz>--illegal-access=deny</argLinezzz>
+          <systemPropertyVariables>
+            <bsh.debugClasses></bsh.debugClasses>
+            <accessibility>false</accessibility>
+            <script></script>
+            <skip_known_issues>true</skip_known_issues>
+          </systemPropertyVariables>
         </configuration>
-    </plugin>
+      </plugin>
     </plugins>
   </build>
 
@@ -260,28 +209,25 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-        <groupId>org.hamcrest</groupId>
-        <artifactId>hamcrest-all</artifactId>
-        <version>1.3</version>
-        <scope>test</scope>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <version>1.3</version>
+      <scope>test</scope>
     </dependency>
-    <!-- TODO: Replace src/main/java/bsh/org/objectweb/asm/
-      with a shadowed asm
-    <dependency>
-     <groupId>asm</groupId>
-     <artifactId>asm</artifactId>
-     <version>1.3.5</version>
-     <scope>provided</scope>
-    </dependency>
-    -->
 
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>4.0.1</version>
-      <scope>provided</scope>
+      <groupId>bsf</groupId>
+      <artifactId>bsf</artifactId>
+      <version>2.4.0</version>
       <optional>true</optional>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache-extras.beanshell</groupId>
+      <artifactId>bsh</artifactId>
+      <version>2.1.0-SNAPSHOT</version>
+    </dependency>
+
   </dependencies>
+
 </project>
